--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
   "name": "howsmydriving-seattle",
-  "version": "0.1.1",
-  "description": "Seattle region plug-in for howsmydriving packagemodule.",
-  "main": "howsmydriving-seattle",
+  "version": "0.1.3",
+  "description": "Seattle region plug-in for @HowsMyDrivingWA.",
+  "declaration": true,
+  "main": "./dist/index.js",
+  "types": "./definitions/index.d.ts",
+  "typescript": {
+    "definition": "definitions/index"
+  },
+  "files": [
+    "config/*",
+    "definitions/**/*",
+    "dist/**/*"
+  ],
   "scripts": {
-    "start": "node index.js",
-    "test": "mocha"
+    "build": "gulp build",
+    "start": "gulp build && node dist/index.js",
+    "test": "gulp test",
+    "release": "standard-version"
   },
   "dependencies": {
+    "@types/bluebird": "^3.5.29",
+    "@types/jasmine": "^3.5.0",
     "async": "^3.1.0",
     "aws-sdk": "^2.577.0",
     "aws-sdk-mock": "^4.5.0",
     "chokidar": "^3.3.0",
     "dynamo-batchwrite-queue": "^1.0.1",
     "express": "^4.14.0",
-    "howsmydriving-utils": "^0.1.12",
+    "howsmydriving-utils": "^0.1.24",
     "live-mutex": "^0.2.21",
     "log4js": "^4.0.2",
     "mocha": "^6.2.1",
@@ -23,7 +37,20 @@
     "sinon": "^7.5.0",
     "soap": "^0.30.0",
     "twit": "^2.1.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "gulp": "^3.9.1",
+    "gulp-cli": "^2.2.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-jasmine": "^4.0.0",
+    "gulp-typescript": "6.0.0-alpha.1",
+    "jasmine": "^3.5.0",
+    "merge2": "^1.3.0",
+    "run-sequence": "^2.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.14",
+    "standard-version": "^7.0.1",
+    "typescript": "^2.4.2"
   },
   "engines": {
     "node": "10.x"
