Updated to latest gulp. Unit tests not working yet after TypeScript rewrite.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,14 @@
     "declaration": true,
     "rootDir": ".",
     "outDir": "dist",
-    "types" : ["node", "jasmine"]
+    "preserveSymlinks": true,
+    "types" : ["node", "mocha"]
   },
   "include": [
     "index.ts",
     "definitions/**/*.ts",
-    "src/**/*.ts"
-  ]
+    "src/**/*.ts",
+    "test/**/*.ts"  
+  ],
+  "exclude": ["node_modules"]
 }
