--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "howsmydriving-seattle",
-  "version": "0.1.13",
+  "version": "0.1.14",
   "description": "Seattle region plug-in for @HowsMyDrivingWA.",
   "declaration": true,
   "main": "./dist/index.js",
@@ -14,43 +14,37 @@
     "dist/**/*"
   ],
   "scripts": {
-    "build": "gulp build",
+    "build": "gulp clean && gulp build && gulp test",
     "start": "gulp build && node dist/index.js",
     "test": "gulp test",
     "release": "standard-version"
   },
   "dependencies": {
-    "@types/bluebird": "^3.5.29",
-    "@types/jasmine": "^3.5.0",
-    "async": "^3.1.0",
-    "aws-sdk": "^2.577.0",
-    "aws-sdk-mock": "^4.5.0",
     "chokidar": "^3.3.0",
-    "dynamo-batchwrite-queue": "^1.0.1",
     "express": "^4.14.0",
-    "howsmydriving-utils": "^0.1.35",
-    "live-mutex": "^0.2.21",
+    "howsmydriving-utils": "^0.1.38",
     "log4js": "^4.0.2",
-    "mocha": "^6.2.1",
     "node-localstorage": "^1.3.1",
     "request": "^2.88.0",
-    "sinon": "^7.5.0",
     "soap": "^0.30.0",
     "twit": "^2.1.0",
-    "uuid": "^3.3.3",
-    "gulp": "^3.9.1",
-    "gulp-cli": "^2.2.0",
-    "gulp-clean": "^0.4.0",
-    "gulp-jasmine": "^4.0.0",
-    "gulp-typescript": "6.0.0-alpha.1",
-    "jasmine": "^3.5.0",
-    "merge2": "^1.3.0",
-    "run-sequence": "^2.2.1"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "@types/mocha": "^5.2.6",
     "@types/node": "^12.12.14",
+    "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-cli": "^2.2.0",
+    "gulp-mocha": "^7.0.2",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "merge2": "^1.3.0",
+    "mocha": "^6.2.2",
+    "mocha-typescript": "^1.1.17",
+    "sinon": "^7.5.0",
     "standard-version": "^7.0.1",
-    "typescript": "^2.4.2"
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.3"
   },
   "engines": {
     "node": "10.x"
