Logging fixes, build clean-up.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,11 @@
   },
   "include": [
     "index.ts",
-    "definitions/**/*.ts",
     "src/**/*.ts",
     "test/**/*.ts"  
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "log/**"
+  ]
 }
