--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "howsmydriving-seattle",
-  "version": "0.1.14",
+  "version": "0.1.23",
   "description": "Seattle region plug-in for @HowsMyDrivingWA.",
   "declaration": true,
   "main": "./dist/index.js",
@@ -8,21 +8,10 @@
   "typescript": {
     "definition": "definitions/index"
   },
-  "files": [
-    "config/*",
-    "definitions/**/*",
-    "dist/**/*"
-  ],
-  "scripts": {
-    "build": "gulp clean && gulp build && gulp test",
-    "start": "gulp build && node dist/index.js",
-    "test": "gulp test",
-    "release": "standard-version"
-  },
   "dependencies": {
     "chokidar": "^3.3.0",
     "express": "^4.14.0",
-    "howsmydriving-utils": "^0.1.38",
+    "howsmydriving-utils": "^0.1.56",
     "log4js": "^4.0.2",
     "node-localstorage": "^1.3.1",
     "request": "^2.88.0",
@@ -33,14 +22,16 @@
   "devDependencies": {
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.12.14",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
-    "gulp-clean": "^0.4.0",
     "gulp-cli": "^2.2.0",
     "gulp-mocha": "^7.0.2",
+    "gulp-prettier": "^2.3.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "merge2": "^1.3.0",
     "mocha": "^6.2.2",
     "mocha-typescript": "^1.1.17",
+    "prettier": "^1.19.1",
     "sinon": "^7.5.0",
     "standard-version": "^7.0.1",
     "ts-node": "^8.5.4",
@@ -48,6 +39,16 @@
   },
   "engines": {
     "node": "10.x"
+  },
+  "files": [
+    "definitions/**/*",
+    "dist/**/*"
+  ],
+  "scripts": {
+    "build": "gulp clean && gulp build && gulp test",
+    "start": "gulp build && node dist/index.js",
+    "test": "gulp test",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
