--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "howsmydriving-seattle",
-  "version": "0.1.29",
+  "version": "0.1.35",
   "description": "Seattle region plug-in for @HowsMyDrivingWA.",
   "declaration": true,
   "main": "./dist/index.js",
@@ -9,19 +9,18 @@
     "definition": "definitions/index"
   },
   "dependencies": {
+    "@types/node": "^12.12.14",
+    "app-root-dir": "^1.0.2",
     "chokidar": "^3.3.0",
-    "express": "^4.14.0",
-    "howsmydriving-utils": "^0.1.82",
+    "howsmydriving-utils": "^0.1.83",
     "log4js": "^4.0.2",
     "node-localstorage": "^1.3.1",
-    "request": "^2.88.0",
     "soap": "^0.30.0",
     "twit": "^2.1.0",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.6",
-    "@types/node": "^12.12.14",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
