--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "howsmydriving-seattle",
-  "version": "0.1.35",
+  "version": "0.1.37",
   "description": "Seattle region plug-in for @HowsMyDrivingWA.",
   "declaration": true,
   "main": "./dist/index.js",
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@types/node": "^12.12.14",
-    "app-root-dir": "^1.0.2",
     "chokidar": "^3.3.0",
-    "howsmydriving-utils": "^0.1.83",
+    "howsmydriving-utils": "^0.1.84",
     "log4js": "^4.0.2",
     "node-localstorage": "^1.3.1",
+    "packpath": "^0.1.0",
     "soap": "^0.30.0",
     "twit": "^2.1.0",
     "uuid": "^3.3.3"
