--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "howsmydriving-seattle",
-  "version": "0.1.59",
+  "version": "0.1.78",
   "description": "Seattle region plug-in for @HowsMyDrivingWA.",
   "declaration": true,
   "main": "./dist/index.js",
@@ -11,10 +11,11 @@
   "dependencies": {
     "@types/node": "^12.12.14",
     "chokidar": "^3.3.0",
-    "howsmydriving-utils": "^0.1.122",
+    "howsmydriving-utils": "^0.1.152",
     "log4js": "^4.0.2",
     "packpath": "^0.1.0",
     "soap": "^0.30.0",
+    "typed-rest-client": "^1.7.1",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
@@ -28,7 +29,6 @@
     "merge2": "^1.3.0",
     "mocha": "^6.2.2",
     "mocha-typescript": "^1.1.17",
-    "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "sinon": "^7.5.0",
     "standard-version": "^7.0.1",
@@ -43,9 +43,10 @@
     "dist/**/*"
   ],
   "scripts": {
-    "build": "gulp clean && gulp build && gulp test",
-    "start": "gulp build && nodemon",
+    "build": "gulp rebuild",
+    "start": "gulp rebuild && node dist/index.js",
     "test": "gulp test",
+    "copyconfigfiles": "gulp copyconfigfiles",
     "release": "standard-version"
   },
   "repository": {
