--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "howsmydriving-seattle",
-  "version": "0.1.124",
+  "version": "0.1.126",
   "description": "Seattle region plug-in for @HowsMyDrivingWA.",
   "declaration": true,
   "main": "./dist/index.js",
@@ -11,8 +11,9 @@
   "dependencies": {
     "@types/node": "^12.12.14",
     "chokidar": "^3.3.0",
-    "howsmydriving-utils": "^0.1.187",
+    "howsmydriving-utils": "^0.1.190",
     "log4js": "^4.0.2",
+    "moment": "^2.24.0",
     "packpath": "^0.1.0",
     "soap": "^0.30.0",
     "typed-rest-client": "^1.7.1",
